@@ -24,6 +24,7 @@ use_ok('Message::Passing::Filter::Encoder::Null');
 use_ok('Message::Passing::Filter::Decoder::JSON');
 use_ok('Message::Passing::Filter::Decoder::Null');
 use_ok('Message::Passing::Role::HasHostnameAndPort');
+use_ok('Message::Passing::Role::HasUsernameAndPassword');
 
 done_testing;
 
